# roboto_origin

./: .gitignore  CMakeLists.txt  create_ap.conf
.scripts/: README.md  sync_subtrees.sh
.scripts/logs/: 2026-01-27.md  README.md
atom01_mechnaic/atom-bom/: BOM表（不含线缆）.xlsx
atom01_mechnaic/atom-bom/SW模型/: 270x60x70电池.SLDPRT  DM 4340 rau 3505 电机 3D.SLDPRT  GB╱T 4605-2003[推力滚针和保持架组件AXK6085].sldprt  IMU反差.SLDPRT  PCB固定.SLDPRT  atom手臂 - 副本 (1).SLDPRT  atom手臂 - 副本 (2).SLDPRT  atom手臂 - 副本 (3).SLDPRT  atom手臂 - 副本 (4).SLDPRT  imu.SLDPRT  imu固定器.SLDPRT  侧板横板.SLDPRT  大腿内侧.SLDPRT  小腿.SLDPRT  小腿轴承锁.SLDPRT  平头M4x10螺丝.SLDPRT  平头M5x10螺丝.SLDPRT  平头M5x16螺丝.SLDPRT  滚动轴承.SLDPRT  电池底盖.SLDPRT  短连杆.SLDPRT  肩膀.SLDPRT  胸腔前后夹板.SLDDRW  (+14 more)
atom01_mechnaic/batterybox/: 3.7vlipo.SLDPRT  Assem1.SLDASM  BMS.SLDPRT  bottom.SLDPRT  bottom.STEP  top.SLDPRT  top.STEP
config/: inference.yaml  inference_amp.yaml  inference_attn_enc.yaml  inference_beyondmimic.yaml  inference_interrupt.yaml  robot.yaml
include/: robot_interface.hpp
launch/: inference.launch.py
mjcf/: atom01.xml
modules/atom01_deploy/: .gitmodules  README.md  README_CN.md
modules/atom01_deploy/imu/: CMakeLists.txt  README.md
modules/atom01_deploy/imu/include/: imu_driver.hpp
modules/atom01_deploy/imu/src/drivers/hipnuc/: CMakeLists.txt
modules/atom01_deploy/imu/src/protocol/: CMakeLists.txt
modules/atom01_deploy/imu/src/protocol/can/: CMakeLists.txt  socket_can.cpp  socket_can.hpp
modules/atom01_deploy/imu/src/protocol/serial/: CMakeLists.txt  serial_port.cpp  serial_port.hpp
src/: inference_node.cpp  inference_node.hpp  robot_interface.cpp  ros_interface.cpp
src/motors/: CMakeLists.txt  package.xml
src/utils/: thread_pool.hpp
urdf/: atom01.urdf
usd/: .asset_hash  config.yaml
usd/configuration/: atom01_physics.usd
(+43 files in other folders)
